--- a/CV/cv.html
+++ b/CV/cv.html
@@ -1,1 +1,50 @@
-
+<HTML>
+    <head>
+        <TITLe>
+          M.ABDULLAH PORTFOLIO
+        </TITLe>
+        <link rel="stylesheet" href="cv.css">
+    </head>
+    <div class="buttons">
+        <a href="cv.html" > <h2>HOME</h2></a>
+        <a href="education.html"> <h2>EDUCATION</h2></a>
+        <a href="experience.html"><h2>EXPERIENCE</h2></a>
+    </div>
+    <DIV class = "container">
+        <div class = "left-box">
+            <img src = "images/3.png" alt="" class=" profile_pic">
+            <h1 class="h1">M.ABDULLAH</h1>
+            <h3 class="h3">Web Developer</h3>
+        </div>
+        <div class = "right-box" >
+            <h3 id = "list">
+                <ul class = "ul">
+                    <li>
+                        <span class= "label"> D.O.B</span>
+                        <span class = "value"> :10/05/2003</span>
+                    </li>
+                    <hr class  = "hr">
+                    <li>
+                        <span class= "label"> PHONE</span>
+                        <span class = "value"> :+92 300 4408448</span>
+                    </li>
+                    <hr class = "hr">
+                    <li>
+                        <span class= "label"> Address </span>
+                        <span class = "value"> :Street 1, Hajvery Scheme, Lahore</span>
+                    </li>
+                    <hr class = "hr">  
+                </ul>
+            </h3>
+            <a href="https://www.linkedin.com/in/muhammad-abdullah10/" target = "_blank">
+                <img id = "linkedin" src="images/linkedin.jpg" >
+            </a>
+            <a href="https://github.com/MAbdullah10/" target = "_blank">
+                <img id = "github" src="images/github-sign.png">
+            </a>
+            <a href="https://www.instagram.com/m.abdullah_cm?igsh=MXU3cjcycnhqNGt6Nw==" target = "_blank">
+                <img id = "insta" src="images/instagram.png">
+            </a>
+            </div>
+    </DIV>
+</HTML>
